--- a/html5up-solid-state/index.html
+++ b/html5up-solid-state/index.html
@@ -70,7 +70,7 @@
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Finance</h2>
-										<p>I was within days of taking a job at a bank before I joined lambda school. I decided that, since finance is a technology - the best way to make a diffrence is to learn about technology - which brings me here. </p>
+										<p>I was within days of taking a job at a bank before I joined lambda school. I decided that, since finance is technology -- the only way to build it from the ground up is to have a deep understanding of the technical infstrucutre that its built ontop of. Which is why I am now learning to be a Engineer.  </p>
 									</div>
 								</div>
 							</section>
@@ -81,7 +81,7 @@
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Avid Reader</h2>
-										<p>I try to read one book a week, and I crush dozens of articles in that time too. I mostly read about history, economics, science and engineering. Right now I am reading 'Captial' by the French economist Thomas Piketty.</p>									</div>
+										<p>I try to read at least 2 books a month, and I crush a few dozen of articles in that time too. I mostly read about history, economics, science and engineering. Right now I am reading 'Captial' by the French economist Thomas Piketty.</p>									</div>
 								</div>
 							</section>
 
