--- a/html5up-solid-state/index.html
+++ b/html5up-solid-state/index.html
@@ -45,7 +45,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Spencer Clark</h2>
-							<p>An wannabe software engineers first portfolio. <a href="Learn More"> Learn more about me!</a></p>
+							<p>A wannabe software engineers first portfolio. <a href="Learn More"> Learn more about me!</a></p>
 						</div>
 					</section>
 
