Getting closer to actually being '' done''

--- a/html5up-solid-state/index.html
+++ b/html5up-solid-state/index.html
@@ -26,26 +26,13 @@
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
-							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
-							</ul>
-							<a href="#" class="close">Close</a>
-						</div>
-					</nav>
-
+					
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Spencer Clark</h2>
-							<p>A wannabe software engineers first portfolio. <a href="Learn More"> Learn more about me!</a></p>
+							<p>A wannabe software engineers first portfolio. <a href="#learn"> Learn more about me!</a></p>
 						</div>
 					</section>
 
@@ -55,7 +42,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a id="learn" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Lambda School</h2>
 										<p>I decided to stop out of university and persue a diffrent path. Lambda school teaches poeple how to be a software engineer and helps them get a job. I am enrolled as Fullstack web developer in the WEB23 Cohort</p>
