--- a/html5up-solid-state/index.html
+++ b/html5up-solid-state/index.html
@@ -45,7 +45,7 @@
 									<a id="learn" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Lambda School</h2>
-										<p>I decided to stop out of university and persue a diffrent path. Lambda school teaches poeple how to be a software engineer and helps them get a job. I am enrolled as Fullstack web developer in the WEB23 Cohort</p>
+										<p>I decided to stop out of university and pursue a diffrent path. Lambda school teaches poeple how to be a software engineer and then helps them get a job. I am enrolled as Fullstack web developer in the WEB23 Cohort</p>
 										
 									</div>
 								</div>
@@ -57,7 +57,7 @@
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Finance</h2>
-										<p>I was within days of taking a job at a bank before I joined lambda school. I decided that, since finance is technology -- the only way to build it from the ground up is to have a deep understanding of the technical infstrucutre that its built ontop of. Which is why I am now learning to be a Engineer.  </p>
+										<p>I was within days of taking an internship at a bank before I decided to join lambda school. I decided that, since finance is technology -- the only way to build it from the ground up is to have a deep understanding of the technical infstrucutre that its built ontop of. Which is why I am now learning to be a Engineer.  </p>
 									</div>
 								</div>
 							</section>
