--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a id="learn" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a id="learn" class="image"><img src="https://images.pexels.com/photos/207697/pexels-photo-207697.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Lambda School</h2>
 										<p>I decided to stop out of university and pursue a diffrent path. Lambda school teaches poeple how to be a software engineer and then helps them get a job. I am enrolled as Fullstack web developer in the WEB23 Cohort</p>
@@ -54,7 +54,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="https://images.pexels.com/photos/159888/pexels-photo-159888.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Finance</h2>
 										<p>I was within days of taking an internship at a bank before I decided to join lambda school. I decided that, since finance is technology -- the only way to build it from the ground up is to have a deep understanding of the technical infstrucutre that its built ontop of. Which is why I am now learning to be a Engineer.  </p>
@@ -65,7 +65,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="https://images.pexels.com/photos/159866/books-book-pages-read-literature-159866.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Avid Reader</h2>
 										<p>I try to read at least 2 books a month, and I crush a few dozen of articles in that time too. I mostly read about history, economics, science and engineering. Right now I am reading 'Captial' by the French economist Thomas Piketty.</p>									</div>
