--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 			<div id="page-wrapper">
 
 				<!-- Header -->
-					<header id="header" class="alt">
+					<!-- <header id="header" class="alt">
 						<h1><a href="index.html">Spencer Clark</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
-					</header>
+					</header> -->
 
 				<!-- Menu -->
 					
